--- a/che-core-vfs-impl/pom.xml
+++ b/che-core-vfs-impl/pom.xml
@@ -54,6 +54,12 @@
             <version>${org.everrest.version}</version>
         </dependency>
         <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${ch.qos.logback.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
