IDEX-2997: Added dialog Window for deletion nodes from project explorer

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -85,6 +85,7 @@ action.paste.description=Paste from clipboard
 deleteNodeDialogTitle = Delete
 deleteFileDialogTitle = Delete file
 deleteFolderDialogTitle = Delete folder
+deleteModuleDialogTitle = Delete Module
 deleteProjectDialogTitle = Delete project
 deleteMultipleDialogTitle = Delete
 
