--- a/platform-api/che-core-api-vfs/pom.xml
+++ b/platform-api/che-core-api-vfs/pom.xml
@@ -42,7 +42,7 @@
         </dependency>
         <dependency>
             <groupId>javax.annotation</groupId>
-            <artifactId>jsr250-api</artifactId>
+            <artifactId>javax.annotation-api</artifactId>
             <version>${javax.annotation.version}</version>
         </dependency>
         <dependency>
