--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -23,6 +23,7 @@
     <packaging>pom</packaging>
     <name>Che Core :: Commons :: Parent</name>
     <modules>
+        <module>che-core-commons-annotations</module>
         <module>che-core-commons-lang</module>
         <module>che-core-commons-inject</module>
         <module>che-core-commons-env</module>
