--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -239,8 +239,12 @@ apply = Apply
 refresh = Refresh
 
 projectProblem.title = Project requires configuration
-projectProblem.message = We cannot determine what type of project this is.<br/> Pressing 'Configure' will open the project configuration wizard.<br/> \
+projectProblem.blank.message = We cannot determine what type of project this is.<br/> Pressing 'Configure' will open the project configuration wizard.<br/> \
                          Press 'Keep Blank' if you want to configure project type as Blank.
+projectProblem.estimateTypes.message = We determine type of project as <b>{0}</b>.<br/> Pressing 'Configure' will open the project configuration wizard.<br/> \
+                         Press Keep {1} if you want to configure project type as {1}.
+
+projectProblem.keepBut.title = Keep {0}
 
 closeProject.title = Stop project
 
