--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -244,7 +244,7 @@ projectProblem.blank.message = We cannot determine what type of project this is.
 projectProblem.estimateTypes.message = We determine type of project as <b>{0}</b>.<br/> Pressing 'Configure' will open the project configuration wizard.<br/> \
                          Press Keep {1} if you want to configure project type as {1}.
 
-projectProblem.keepBut.title = Keep {0}
+projectProblem.keepButton.title = Keep {0}
 
 closeProject.title = Stop project
 
