--- a/platform-api/che-core-api-workspace/pom.xml
+++ b/platform-api/che-core-api-workspace/pom.xml
@@ -30,11 +30,6 @@
             <artifactId>swagger-annotations</artifactId>
             <version>${com.wordnik.swagger.version}</version>
         </dependency>
-        <dependency>
-            <groupId>javax.websocket</groupId>
-            <artifactId>javax.websocket-api</artifactId>
-            <version>${javax.websocket.api.version}</version>
-        </dependency>
         <!--
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
@@ -57,6 +52,12 @@
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>che-core-api-user</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.websocket</groupId>
+            <artifactId>javax.websocket-api</artifactId>
+            <version>${javax.websocket.api.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax.ws.rs</groupId>
