--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>che-core-parent</artifactId>
         <groupId>org.eclipse.che.core</groupId>
-        <version>3.12.5</version>
+        <version>3.12.6-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>che-core-commons-parent</artifactId>
