--- a/ide/che-core-ide-ui/pom.xml
+++ b/ide/che-core-ide-ui/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>che-core-ide-parent</artifactId>
         <groupId>org.eclipse.che.core</groupId>
-        <version>3.12.5</version>
+        <version>3.12.6-SNAPSHOT</version>
     </parent>
     <artifactId>che-core-ide-ui</artifactId>
     <name>Che Core :: IDE :: UI</name>
