Update IDE preference names

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -102,12 +102,12 @@ mixedProjectDeleteTitle = Mixed delete unsupported
 mixedProjectDeleteMessage = Deleting projects and files/folders in the same operation is not supported. Please delete them separately.
  
 ############### ExtensionManager #########################
-extension.title = Plug-ins List
-extension.category = Plug-ins Configuration
+extension.title = List
+extension.category = Plug-Ins
 
 ############### Appearance ###############################
 appearance.title = Appearance
-appearance.category = IDE Settings
+appearance.category = IDE
 
 ############### Formatter of Code ###############################
 format.name = Format
