IDEX-3084: Added ability to select recipe during creation of workspace

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -243,3 +243,14 @@ privacy.tooltip.privateMessage=Only those who have been granted<br/> permissions
 
 ############## Settings ####################
 project.settings.title=Settings
+
+############## Create Workspace Dialog ########
+create.ws.title=Create Workspace
+create.ws.recipe.url=Recipe URL:
+create.ws.find.by.tags=Find by tags:
+create.ws.name=Name:
+create.ws.url.not.valid=URL is not valid
+create.ws.recipe.not.found=No recipe found
+create.ws.button=Create
+create.ws.default.name=env-dev
+create.ws.name.is.not.correct=Name is incorrect
