IDEX-2990 tree bugfixes and improvements

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -82,19 +82,9 @@ action.copy.description=Copy to clipboard
 action.paste.text=Paste
 action.paste.description=Paste from clipboard
 
-deleteNodeDialogTitle = Delete
-deleteFileDialogTitle = Delete file
-deleteFolderDialogTitle = Delete folder
-deleteModuleDialogTitle = Delete Module
-deleteProjectDialogTitle = Delete project
-deleteMultipleDialogTitle = Delete
-
-deleteNodeDialogQuestion = Are you sure you want to delete \"{0}\"?
-deleteFileDialogQuestion = Are you sure you want to delete file \"{0}\"?
-deleteFolderDialogQuestion = Are you sure you want to delete folder \"{0}\"?
-deleteProjectDialogQuestion = Are you sure you want to delete project \"{0}\"?
-deleteModuleDialogQuestion = Are you sure you want to delete module \"{0}\"?
-deleteMultipleDialogMessage = Are you sure you want to delete the following files?
+deleteDialogTitle=Delete
+deleteFilesAndSubdirectoriesInTheSelectedDirectory=</br>All files and subdirectories in the selected directory(s) will be deleted.</br>You might not be able to fully undo this operation!
+deleteAllFilesAndSubdirectories=</br>All files and subdirectories in "{0}" will be deleted.</br>You might not be able to fully undo this operation!
 
 stopProcessesBeforeDeletingProject = You should stop all running processes associated with this project before deleting it
 
