--- a/platform-api/che-core-api-infrastructure-local/pom.xml
+++ b/platform-api/che-core-api-infrastructure-local/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>che-core-api-parent</artifactId>
         <groupId>org.eclipse.che.core</groupId>
-        <version>3.12.5</version>
+        <version>3.12.5.1-SNAPSHOT</version>
     </parent>
     <artifactId>che-core-api-infrastructure-local</artifactId>
     <name>Che Core :: API :: Local Infrastructure</name>
