Fix start existing workpace for now only for SDK becouse we manadge only one workspace

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -210,6 +210,8 @@ messages.startingOperation=Starting {0}
 messages.operationsCompleted=The operations completed!
 messages.gettingWorkspace=Getting workspace
 messages.creatingWorkspace=Creating workspace
+messages.workspaceStarted = Workspace \"{0}\" started
+messages.workspaceStartingFailed = Start workspace failed
 ############### Buttons ###############################
 ok = OK
 cancel = Cancel
