--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -153,7 +153,7 @@ importProject.message.failure = Project import failed.
 importProject.message.startWithWhiteSpace = The url can not start with a whitespace.
 importProject.message.urlInvalid = The URL provided for the project to import is invalid.
 importProject.message.unableGetSshKey = Unable get private ssh key. \
-  You can create a new SSH key pair in Window->Preferences->Keys And Certificates->SSH Keystore.
+  You can create a new SSH key pair in Window->Preferences->Keys->SSH Keystore.
 importProject.importer.info = Importer Information
 importProject.project.info = Project Information
 importProject.name.prompt = Define the name of your project...
