--- a/platform-api/che-core-api-workspace/pom.xml
+++ b/platform-api/che-core-api-workspace/pom.xml
@@ -72,6 +72,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.1.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.everrest</groupId>
             <artifactId>everrest-assured</artifactId>
             <version>${org.everrest.assured.version}</version>
