IDEX-3117: Added ability to manage workspaces

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -246,9 +246,15 @@ privacy.tooltip.privateMessage=Only those who have been granted<br/> permissions
 ############## Settings ####################
 project.settings.title=Settings
 
+############## Stop workspace action ##########
+stop.ws.title=Stop Workspace
+stop.ws.description=Stop current workspace
+stop.ws.notification=Workspace {0} was stopped...
+
 ############## Create Workspace Dialog ########
 create.ws.title=Create Workspace
 create.ws.recipe.url=Recipe URL:
+create.ws.predefined.recipe=Predefined Recipes:
 create.ws.find.by.tags=Find by tags:
 create.ws.name=Name:
 create.ws.url.not.valid=URL is not valid
@@ -256,3 +262,16 @@ create.ws.recipe.not.found=No recipe found
 create.ws.button=Create
 create.ws.default.name=env-dev
 create.ws.name.is.not.correct=Name is incorrect
+placeholder.input.recipe.url=Enter recipe URL
+placeholder.choose.predefined=Choose predefined recipe
+placeholder.find.by.tags=Input tag to find recipe
+
+############# Start Workspace Dialog ##########
+start.ws.title=Start Workspace
+start.ws.button=Start
+start.ws.select.to.start=Workspace to start:
+placeholder.select.ws.to.start=Click to select workspace for starting
+started.ws=Started workspace {0} ...
+starting.ext.server=Starting extension server
+ext.server.started=Extension server is started...
+ext.server.stopped=Extension server is stopped...
