IDEX-3085. Recognize project types after import raw project sources and make user possible to choose desired one.

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -228,9 +228,22 @@ save = Save
 apply = Apply
 refresh = Refresh
 
-projectProblem.title = Project requires configuration
-projectProblem.message = We cannot determine what type of project this is.<br/> Pressing 'Configure' will open the project configuration wizard.<br/> \
-                         Press 'Keep Blank' if you want to configure project type as Blank.
+projectProblemDialog.title = Project requires configuration
+projectProblem.configureButton.title = Configure...
+projectProblem.openAsIsButton.title = Open as is
+projectProblem.openAsButton.title = Open as {0}
+projectProblem.notDetermineProjectType.message = We cannot determine what type of project this is.<br/>\
+                               Pressing Configure will open the project configuration wizard.<br/> \
+                               Press Open as is if you want to open project as is.
+projectProblem.openAs.message = We determine type of project as {0}.<br/>\
+                                Press Open as {0} if you want to open project as {0}.<br/>\
+                                Press Open as is if you want to open project as is.<br/>\
+                                Pressing Configure will open the project configuration wizard.<br/>
+
+projectProblem.estimatedTypes.message = We determine type of project as
+projectProblem.pressingButtons.message = Press Open as {0} if you want to open project as {0}.<br/>\
+                                         Press Open as is if you want to open project as is.<br/> \
+                                         Pressing Configure will open the project configuration wizard.<br/>
 
 closeProject.title = Stop project
 
