IDEX-2631: Remove ability to select 'Default Editor' from Preferences

--- a/ide/che-core-ide-jseditor/src/main/resources/org/eclipse/che/ide/jseditor/client/preference/EditorPrefLocalizationConstant.properties
+++ b/ide/che-core-ide-jseditor/src/main/resources/org/eclipse/che/ide/jseditor/client/preference/EditorPrefLocalizationConstant.properties
@@ -12,6 +12,6 @@
 
 ############### Editor Type ###############################
 
-editortype.title = Editors
+editortype.title = Editor
 editortype.category = IDE Settings
 
