--- a/platform-api-client-gwt/che-core-client-gwt-account/pom.xml
+++ b/platform-api-client-gwt/che-core-client-gwt-account/pom.xml
@@ -95,6 +95,11 @@
                     </dependency>
                     <dependency>
                         <groupId>org.eclipse.che.core</groupId>
+                        <artifactId>che-core-api-workspace</artifactId>
+                        <version>${project.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.eclipse.che.core</groupId>
                         <artifactId>che-core-client-gwt-core</artifactId>
                         <version>${project.version}</version>
                     </dependency>
@@ -102,6 +107,7 @@
                 <configuration>
                     <dtoPackages>
                         <package>org.eclipse.che.api.account.shared.dto</package>
+                        <package>org.eclipse.che.api.workspace.shared.dto</package>
                     </dtoPackages>
                     <outputDirectory>${dto-generator-out-directory}</outputDirectory>
                     <genClassName>org.eclipse.che.api.account.gwt.client.dto.DtoClientImpls</genClassName>
