--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <packaging>pom</packaging>
     <name>Che Core Parent</name>
     <modules>
+        <module>che-admin-api</module>
         <module>commons</module>
         <module>platform-api</module>
         <module>platform-api-client-gwt</module>
