--- a/commons/che-core-commons-gwt/pom.xml
+++ b/commons/che-core-commons-gwt/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>che-core-commons-parent</artifactId>
         <groupId>org.eclipse.che.core</groupId>
-        <version>3.13.0</version>
+        <version>3.13.1-SNAPSHOT</version>
     </parent>
     <artifactId>che-core-commons-gwt</artifactId>
     <name>Che Core :: Commons :: GWT</name>
