--- a/commons/che-core-commons-json/pom.xml
+++ b/commons/che-core-commons-json/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>che-core-commons-parent</artifactId>
         <groupId>org.eclipse.che.core</groupId>
-        <version>3.13.0</version>
+        <version>3.13.1-SNAPSHOT</version>
     </parent>
     <artifactId>che-core-commons-json</artifactId>
     <packaging>jar</packaging>
