IDEX-3137: Changed some text on IDE preference window

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -91,12 +91,12 @@ mixedProjectDeleteTitle = Mixed delete unsupported
 mixedProjectDeleteMessage = Deleting projects and files/folders in the same operation is not supported. Please delete them separately.
  
 ############### ExtensionManager #########################
-extension.title = Plug-ins List
-extension.category = Plug-ins Configuration
+extension.title = List
+extension.category = Plug-ins
 
 ############### Appearance ###############################
 appearance.title = Appearance
-appearance.category = IDE Settings
+appearance.category = IDE
 
 ############### Formatter of Code ###############################
 format.name = Format
@@ -151,7 +151,7 @@ importProject.message.failure = Project import failed.
 importProject.message.startWithWhiteSpace = The url can not start with a whitespace.
 importProject.message.urlInvalid = The URL provided for the project to import is invalid.
 importProject.message.unableGetSshKey = Unable get private ssh key. \
-  You can create a new SSH key pair in Window->Preferences->Keys And Certificates->SSH Keystore.
+  You can create a new SSH key pair in Window->Preferences->Keys->SSH Keystore.
 importProject.importer.info = Importer Information
 importProject.project.info = Project Information
 importProject.name.prompt = Define the name of your project...
