--- a/ide/che-core-ide-jseditor/src/main/resources/org/eclipse/che/ide/jseditor/client/preference/EditorPrefLocalizationConstant.properties
+++ b/ide/che-core-ide-jseditor/src/main/resources/org/eclipse/che/ide/jseditor/client/preference/EditorPrefLocalizationConstant.properties
@@ -13,5 +13,5 @@
 ############### Editor Type ###############################
 
 editortype.title = Editor
-editortype.category = IDE Settings
+editortype.category = IDE
 
