--- a/che-maven-plugin/pom.xml
+++ b/che-maven-plugin/pom.xml
@@ -26,23 +26,23 @@
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-core</artifactId>
-            <version>3.3.3</version>
+            <version>${org.apache.maven.maven-core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.codehaus.plexus</groupId>
             <artifactId>plexus-archiver</artifactId>
-            <version>3.0.1</version>
+            <version>${org.codehaus.plexus.plexus-archiver.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
-            <version>3.3.3</version>
+            <version>${org.apache.maven.maven-plugin-api.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-annotations</artifactId>
-            <version>3.4</version>
+            <version>${org.apache.maven.plugin-tools.maven-plugin-annotations.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -55,13 +55,13 @@
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-compat</artifactId>
-            <version>3.3.3</version>
+            <version>${org.apache.maven.maven-compat.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.maven.plugin-testing</groupId>
             <artifactId>maven-plugin-testing-harness</artifactId>
-            <version>3.3.0</version>
+            <version>${org.apache.maven.plugin-testing.maven-plugin-testing-harness.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -78,7 +78,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
-                <version>3.3</version>
+                <version>${version.plugin.plugin}</version>
                 <executions>
                     <execution>
                         <id>mojo-descriptor</id>
