--- a/che-core-vfs-impl/pom.xml
+++ b/che-core-vfs-impl/pom.xml
@@ -21,7 +21,7 @@
     </parent>
     <artifactId>che-core-vfs-impl</artifactId>
     <packaging>jar</packaging>
-    <name>Che Core :: Virtual File System</name>
+    <name>Che Core :: Virtual File System (Deprecated)</name>
     <dependencies>
         <dependency>
             <groupId>commons-codec</groupId>
