--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -31,5 +31,6 @@
         <module>che-core-commons-xml</module>
         <module>che-core-commons-schedule</module>
         <module>che-core-commons-gwt</module>
+        <module>che-core-maven-plugin</module>
     </modules>
 </project>
