CLDIDE-2557; enable build factory client

--- a/platform-api-client-gwt/pom.xml
+++ b/platform-api-client-gwt/pom.xml
@@ -31,7 +31,7 @@
         <module>che-core-client-gwt-project</module>
         <module>che-core-client-gwt-user</module>
         <module>che-core-client-gwt-vfs</module>
-        <!--<module>che-core-client-gwt-factory</module>-->
+        <module>che-core-client-gwt-factory</module>
         <module>che-core-client-gwt-git</module>
         <module>che-core-client-gwt-workspace</module>
     </modules>
