IDEX-3123: Change behaviour during starting workspace.

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -259,7 +259,10 @@ placeholder.find.by.tags=Input tag to find recipe
 start.ws.title=Start Workspace
 start.ws.button=Start
 start.ws.select.to.start=Workspace to start:
-placeholder.select.ws.to.start=Click to select workspace for starting
+placeholder.select.ws.to.start=Click to select workspace to start
 started.ws=Started workspace {0} ...
-ext.server.started=Extension server is started...
-ext.server.stopped=Extension server is stopped...
+ext.server.started=Extension server started...
+ext.server.stopped=Extension server stopped...
+workspace.start.failed=Workspace {0} starting is failed.
+start.ws.error.title=Start Workspace Error
+start.ws.error.content=Workspace {0} failed to start. Try restarting it, start existing workspace or create a new one
