--- a/che-core-vfs-impl/pom.xml
+++ b/che-core-vfs-impl/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>che-core-parent</artifactId>
         <groupId>org.eclipse.che.core</groupId>
-        <version>3.13.1-SNAPSHOT</version>
+        <version>3.13.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>che-core-vfs-impl</artifactId>
