Auth refactoring used pack4j

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
     </scm>
     <properties>
         <maven.model.version>3.0.5</maven.model.version>
+        <org.pac4j.version>1.8.0-SNAPSHOT</org.pac4j.version>
         <specification.version>1.0-beta2</specification.version>
     </properties>
     <repositories>
