IDEX-3277: Add workspace name validation.

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -251,6 +251,8 @@ create.ws.recipe.not.found=No recipe found
 create.ws.button=Create
 create.ws.default.name=env-dev
 create.ws.name.is.not.correct=Name is incorrect
+create.ws.name.length.is.not.correct=Name length must be from 3 to 20 characters
+create.ws.name.already.exist=Name already exist
 placeholder.input.recipe.url=Enter recipe URL
 placeholder.choose.predefined=Choose predefined recipe
 placeholder.find.by.tags=Input tag to find recipe
