--- a/platform-api-client-gwt/che-core-client-gwt-project/pom.xml
+++ b/platform-api-client-gwt/che-core-client-gwt-project/pom.xml
@@ -62,6 +62,11 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
+            <artifactId>che-core-client-gwt-workspace</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.che.core</groupId>
             <artifactId>che-core-commons-gwt</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -106,6 +111,11 @@
                     <dependency>
                         <groupId>org.eclipse.che.core</groupId>
                         <artifactId>che-core-client-gwt-core</artifactId>
+                        <version>${project.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.eclipse.che.core</groupId>
+                        <artifactId>che-core-client-gwt-workspace</artifactId>
                         <version>${project.version}</version>
                     </dependency>
                 </dependencies>
