IDEX-3229: Fix frequent changing DOM model, during machine output

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -240,6 +240,10 @@ stop.ws.title=Stop Workspace
 stop.ws.description=Stop current workspace
 stop.ws.notification=Workspace {0} was stopped...
 
+############## Get workspace #############
+get.ws.error.dialog.title=Error
+get.ws.error.dialog.content=Can not get workspaces. The reason: {0}.
+
 ############## Create Workspace Dialog ########
 create.ws.title=Create Workspace
 create.ws.recipe.url=Recipe URL:
